--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 - Log every call to an endpoint (with user data like ipaddr, hostname, etc.)
+- Upload endpoints to upload files to the HDD
+
 
 
 Eventually maybe file manager using "tags"
