--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,5 @@
 - Log every call to an endpoint (with user data like ipaddr, hostname, etc.)
-- Delete files
-
+- Create directory
 
 
 Eventually maybe file manager using "tags"
